// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render text input 1`] = `
<input
  className="input"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Input render text input highlight 1`] = `
<input
  className="input input--highlight"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Input render text input simple 1`] = `
<input
  className="input input--simple"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Input render text with gray theme 1`] = `
<input
  className="input input--gray"
  onChange={[Function]}
  type="text"
/>
`;
